# P2PSKY

./: README.md
docs/: API.md  README.md
examples/: p2p_demo.cpp
include/: p2p.h
release/Windows/release/aarch64/: p2p.lib
release/Windows/release/x64/: p2p.lib
release/Windows/release/x86/: p2p.lib
release/iOS/libp2p.xcframework/: Info.plist
release/iOS/libp2p.xcframework/ios-arm64/: Headers
src/p2p-core/: Cargo.toml
src/p2p-core/src/: candidate.rs  config.rs  connection.rs  crypto.rs  dns_disguise.rs  dual_stack.rs  error.rs  fec.rs  kcp_session.rs  lib.rs  nat.rs  negotiation.rs  pipeline.rs  punch.rs  stats.rs
src/p2p-ffi/: Cargo.toml  build.rs
src/p2p-ffi/include/: p2p.h
src/p2p-ffi/src/: callbacks.rs  error.rs  lib.rs  types.rs
src/p2p-signaling-client/: Cargo.toml
src/p2p-signaling-client/src/: lib.rs  ws_client.rs
src/p2p-signaling-proto/: Cargo.toml
src/p2p-signaling-proto/src/: messages.rs
src/p2p-stun/: Cargo.toml
src/p2p-stun/src/: binding.rs  discovery.rs  lib.rs  router.rs  servers.rs
src/signaling-server-go/: go.mod  main.go
src/signaling-server-go-hp/: conn.go  epoll.go  go.mod  go.sum  handler.go  main.go  metrics.go  protocol.go  reactor.go  registry.go  session.go
