[package]
name = "p2p-ffi"
version.workspace = true
edition.workspace = true

[lib]
# staticlib = 完整静态库 (.lib / .a), 推荐 Windows 使用
# cdylib   = 动态库 (.dll / .so / .dylib)
crate-type = ["staticlib", "cdylib"]
name = "p2p"

[dependencies]
p2p-core = { path = "../p2p-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
